# obsidian-rust-plugin

./: .gitignore  Cargo.toml  README.md  bun.lockb  main.ts  package.json  vite.config.ts
obsidian-rs/: Cargo.toml
obsidian-rs/src/: lib.rs
src/: lib.rs
