workspace = { members = ["obsidian-rs"] }
[package]
name = "rust-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["console"] }
wasm-bindgen = "0.2.92"
obsidian-rs = { path = "obsidian-rs" }
web-sys = { version = "0.3.69", features = ["Element", "Event", "DomTokenList"] }
